Add rich text to posts

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,12 +18,7 @@
 
   <div class="field">
     <%= form.label :body %>
-    <%= form.text_area :body %>
-  </div>
-
-  <div class="field">
-    <%= form.label :created_at %>
-    <%= form.text_field :created_at %>
+    <%= form.rich_text_area :body %>
   </div>
 
   <div class="actions">
