--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,25 +1,27 @@
-<div class="intro">
-    <span class="name">
-        <h1 id="firstline">Hey</h1>
-        <h2 id="secondline">My name is Yuchen Liu.</h2>
-    </span>
+<div class="container">
+    <div class="intro">
+        <span class="title">
+            <h2 id="firstline">Hey</h2>
+            <h2 id="secondline">My name is Yuchen Liu.</h2>
+        </span>
 
-    <div class="description">
-        <p class="body">
-            I'm studying CS and Data Science at <b>NYU</b>. 
-            It's my 5th year in the U.S. now. I started programming in high school to make cool games and automation.
-            Now, I mainly work on web development because I'm excited about how fast it's evolving and its combinations of many different technologies.
-            I like to predict what products do people want and think about how to make a positive impact.
-            My passions lie particularly in fullstack, open source, and software design patterns. 
-            <br/>
-        </p>
-        
-        <div class="links">
-            <a href="https://www.linkedin.com/in/yuchenliu10/" target="_blank">linkedin</a>
-            <a href="https://github.com/yuchenliu15" target="_blank">github</a>
-            <a href="/uploads/resume.pdf" >resume</a>
-            <a href="mailto:yl6448@nyu.edu?subject=subject">email</a>
+        <div class="description">
+            <p class="body">
+                I'm studying CS and Data Science at <b>NYU</b>. 
+                It's my 5th year in the U.S. now. I started programming in high school to make cool games and automation.
+                Now, I mainly work on web development because I'm excited about how fast it's evolving and its combinations of many different technologies.
+                I like to predict what products do people want and think about how to make a positive impact.
+                My passions lie particularly in fullstack, open source, and software design patterns. 
+                <br/>
+            </p>
+            
+            <div class="links">
+                <a href="https://www.linkedin.com/in/yuchenliu10/" target="_blank">linkedin</a>
+                <a href="https://github.com/yuchenliu15" target="_blank">github</a>
+                <a href="/uploads/resume.pdf" >resume</a>
+                <a href="mailto:yl6448@nyu.edu?subject=subject">email</a>
+            </div>
         </div>
-    </div>
 
+    </div>
 </div>
