--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -58,6 +58,29 @@ body{
             margin-bottom: -50px;
         }
         
+        .links{
+            word-spacing: 20px;
+            margin-bottom: 100px;
+        }
+        
+        a{
+            padding: 7px;
+            background-color: #c8d6e5;
+            border-radius: 10px;
+            font-size: 1.2em;
+            text-decoration: none;
+            color: #000000;
+            position: relative;
+        }
+        
+        
+        a:hover {
+            background-color: #95afc0;
+        }
+        
+        a:visited{
+            color: #000000;
+        }
     }
 }
 
@@ -71,38 +94,7 @@ body{
     line-height: 2.1em;
 }
 
-.links{
-    word-spacing: 20px;
-    margin-bottom: 100px;
-}
 
-.links a{
-    font-size: 1.2em;
-    text-decoration: none;
-    color: #000000;
-    position: relative;
-}
-
-.links a::after{
-    content: "";
-    position: absolute;
-    z-index: -1;
-    top: 60%;
-    left: -0.1em;
-    right: -0.1em;
-    bottom: 0;
-    transition: top 200ms cubic-bezier(0, .8, .13, 1);
-    background-color: #f7d794;
-}
-
-
-.links a:hover::after {
-    top: 0;
-}
-
-.links a:visited{
-    color: #000000;
-}
 
 .project {
     grid-area: project;
