--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -7,19 +7,20 @@
 
         <div class="description">
             <p class="body">
-                I'm studying CS and Data Science at <b>NYU</b>. 
-                It's my 5th year in the U.S. now. I started programming in high school to make cool games and automation.
-                Now, I mainly work on web development because I'm excited about how fast it's evolving and its combinations of many different technologies.
+                I'm a CS and Data Science student at <b>NYU</b>. 
+                I'm excited to combine my skills in software engineering and data science to build meaningful projects.
+                Outside of school, I mainly work on web development because I'm excited of 
+                its vibrant, evolving community and combinations of many different technologies.
                 I like to predict what products do people want and think about how to make a positive impact.
                 My passions lie particularly in fullstack, open source, and software design patterns. 
                 <br/>
             </p>
             
             <div class="links">
-                <a href="https://www.linkedin.com/in/yuchenliu10/" target="_blank">linkedin</a>
-                <a href="https://github.com/yuchenliu15" target="_blank">github</a>
-                <a href="/uploads/resume.pdf" >resume</a>
-                <a href="mailto:yl6448@nyu.edu?subject=subject">email</a>
+                <a href="https://www.linkedin.com/in/yuchenliu10/" target="_blank">👔linkedin</a>
+                <a href="https://github.com/yuchenliu15" target="_blank">👨‍💻github</a>
+                <a href="/uploads/resume.pdf" >📚resume</a>
+                <a href="mailto:yl6448@nyu.edu?subject=subject">📮email</a>
             </div>
         </div>
 
