Add mobile styling

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -2,14 +2,16 @@
     <div class="intro">
         <span class="title">
             <h2 id="firstline">Hey</h2>
-            <h2 id="secondline">My name is Yuchen Liu.</h2>
+            <h2 id="secondline">My name is Yuchen</h2>
         </span>
 
         <div class="description">
-            <p class="body">
+            <p>
                 I'm a CS and Data Science student at <b>NYU</b>. 
-                I'm excited to combine my skills in software engineering and data science to build meaningful projects.
-                Outside of school, I mainly work on web development because I'm excited of 
+                I'm excited to combine my coding skills and interests in data to build intelligent software.
+            </p>
+            <p>
+                Outside of school, I mainly work on web development because I'm excited about 
                 its vibrant, evolving community and combinations of many different technologies.
                 I like to predict what products do people want and think about how to make a positive impact.
                 My passions lie particularly in fullstack, open source, and software design patterns. 
