--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -69,7 +69,7 @@ body{
             border-radius: 10px;
             font-size: 1em;
             text-decoration: none;
-            color: #000000;
+            color: #201717;
             position: relative;
             font-family: 'Poppins';
             font-weight: 900;
@@ -82,6 +82,38 @@ body{
         
         a:visited{
             color: #000000;
+        }
+    }
+
+    @media only screen and (max-device-width: 480px){
+        grid-template-columns: 15% 50% 35%;
+        grid-template-rows: 10% repeat(4, auto) auto;
+        grid-template-areas: 
+            "intro intro intro"
+            "intro intro intro"
+            "intro intro intro"
+            "intro intro intro";
+        
+        .intro{
+            padding: 80px;
+
+            .title {
+                font-size: 5em;
+
+            }
+            .description{
+                font-size: 3em;
+            }
+            
+            .links{
+                display: flex;
+                flex-direction: column;
+                gap: 1em;
+            }
+
+            a{
+                text-align: center;
+            }
         }
     }
 }
