--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -108,11 +108,11 @@ body{
             .links{
                 display: flex;
                 flex-direction: column;
-                gap: 1em;
             }
 
             a{
                 text-align: center;
+                margin-bottom: 1em;
             }
         }
     }
