Organize posts views

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to 'Back', posts_path %>
+
 <p>
   <strong>Title:</strong>
   <%= @post.title %>
@@ -15,5 +17,7 @@
   <%= @post.created_at %>
 </p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
+<% if session[:user_id] %>
+  <%= link_to 'Edit', edit_post_path(@post) %>
+<% end %>
 <%= link_to 'Back', posts_path %>
