--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,8 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Posts</h1>
-
-<%= render @posts %>
+<div class="blog-container">
+  <div class="container">
+    <%= render @posts %>
+  </div>
+</div>
 
 
 
