--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,1 +1,36 @@
+html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
 
+*{
+    box-sizing: border-box;
+}
+
+body{
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden; 
+}
+
+@font-face {
+    src: font-url("Roboto-Light.ttf");
+    font-family: 'Roboto';
+    font-weight: normal;
+}
+
+@font-face {
+    src: font-url("Poppins-ExtraBold.ttf");
+    font-family: 'Poppins';
+    font-weight: 900;
+}
+
+@font-face {
+    src: font-url("Poppins-Medium.ttf");
+    font-family: 'Poppins';
+    font-weight: 500;
+}
