--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,23 @@
-// Place all the styles related to the Posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.blog-container {
+    height: 100%;
+    display: grid;
+    grid-gap: 0;
+    grid-template-columns: 15% 60% 10% 15%;
+    grid-template-areas:
+        ". container . ."
+        ". container . ."
+        ". container . .";
+
+    .container {
+        grid-area: container;
+
+        display: flex;
+        flex-direction: column;
+    }
+
+    .post {
+        h2 {
+            font-family: 'Poppins';
+        }
+    }
+}
