--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -16,8 +16,35 @@
     }
 
     .post {
-        h2 {
+        font-family: 'Roboto';
+        font-size: 1.5em;
+        display: flex;
+        flex-direction: column;
+        background-color: #c8d6e5;
+        border-radius: 10px;
+        padding: 2.5em;
+        padding-top: 0;
+        * {
+            margin-bottom: -5px;
+        }
+
+        .title {
             font-family: 'Poppins';
+            font-size: 3em;
+            font-weight: 900;
+            margin-top: 0;
+            a{
+                text-decoration: none;
+            }
+            a:visited{
+                color: #000000;
+            }
+        }
+        
+        .date {
+            font-family: 'Poppins';
+            font-weight: 900;
+            color:#576574;
         }
     }
 }
