--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,7 +1,7 @@
 <div class="post">
-    <h2><%= link_to post.title , post %></h2>
-    <p><%= truncate(post.body.to_plain_text) %></p>
-    <p><%= post.created_at.strftime("%m/%d, %Y") %></p>
+    <p class="date">⏰ <%= post.created_at.strftime("%m/%d, %Y") %> ⏰</p>
+    <p class="title"><%= link_to post.title, post %></p>
+    <p><%= truncate(post.body.to_plain_text, length: 190) %></p>
     <% if session[:user_id] %>
         <%= link_to 'Edit', edit_post_path(post) %>
         <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
