--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,5 @@
-<div class="blog-container">
-  <div class="container">
-    <%= render @posts %>
-  </div>
+<div class="blog">
+  <%= render @posts %>
 </div>
 
 <br>
