--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Back', posts_path %>
+<%= button_to '⬅️', posts_url, method: :get %>
 
 <p>
   <strong>Title:</strong>
