--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -28,10 +28,46 @@
         color:#576574;
     }
 
-    .post {
+    .item {
         background-color: #c8d6e5;
         border-radius: 10px;
         padding: 2.5em;
         padding-top: 0;
+    }
+}
+
+.post {
+    grid-area: intro;
+    font-family: 'Roboto';
+    font-size: 1.5em;
+    display: flex;
+    flex-direction: column;
+    margin-top: 2em;
+    margin-bottom: 5em;
+    * {
+        margin-bottom: -5px;
+    }
+
+    .title {
+        font-family: 'Poppins';
+        font-size: 3em;
+        font-weight: 900;
+        margin-top: 0;
+        text-align: center;
+    }
+
+    .button {
+        font-family: 'Poppins';
+        font-weight: 900;
+        font-size: 1em;
+        text-decoration: none;
+        background-color:  #c8d6e5;
+        padding: 0.4em 0.8em 0.4em 0.8em;
+        border-radius: 10px;
+        border: none;
+    }
+
+    .button:hover {
+        cursor: pointer;
     }
 }
