--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,23 +1,17 @@
-<p id="notice"><%= notice %></p>
+<div class="post">
+  <%= button_to '⬅️ back', posts_path, method: :get, class: "button" %>
 
-<%= button_to '⬅️', posts_url, method: :get %>
+  <p class="title">
+    <%= @post.title %>
+  </p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
+  <p class="body">
+    <%= @post.body %>
+  </p>
 
-<p>
-  <strong>Body:</strong>
-  <%= @post.body %>
-</p>
+  <% if session[:user_id] %>
+    <%= link_to 'Edit', edit_post_path(@post) %>
+  <% end %>
+  <%= button_to '⬅️ back', posts_url, method: :get, class: "button" %>
+</div>
 
-<p>
-  <strong>Created at:</strong>
-  <%= @post.created_at %>
-</p>
-
-<% if session[:user_id] %>
-  <%= link_to 'Edit', edit_post_path(@post) %>
-<% end %>
-<%= link_to 'Back', posts_path %>
