--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -17,12 +17,12 @@
             <br/>
         </p>
         
-        <div class="links">
-            <a href="https://www.linkedin.com/in/yuchenliu10/" target="_blank">👔linkedin</a>
-            <a href="https://github.com/yuchenliu15" target="_blank">👨‍💻github</a>
-            <a href="/uploads/resume.pdf" >📚resume</a>
-            <a href="mailto:yl6448@nyu.edu?subject=subject">📮email</a>
-        </div>
-    </div>
 
+    </div>
+    <div class="links">
+        <%= link_to '👔linkedin', "https://www.linkedin.com/in/yuchenliu10/" %>
+        <a href="https://github.com/yuchenliu15" target="_blank">👨‍💻github</a>
+        <a href="/uploads/resume.pdf" >📚resume</a>
+        <a href="mailto:yl6448@nyu.edu?subject=subject">📮email</a>
+    </div>
 </div>
