--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
 
   <body>
     <div class="container">
+    <div class="navigator">
+      <%= link_to "home", root_url %>
+    </div>
       <%= yield %>
     </div>
   </body>
