--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,17 +1,16 @@
 <div class="intro">
     <span class="title">
-        <h2 id="firstline">Hey</h2>
-        <h2 id="secondline">My name is Yuchen</h2>
+        <h2 id="firstline">Hey, My name is Yuchen</h2>
     </span>
 
     <div class="description">
         <p>
-            I'm a CS and Data Science student at <b>NYU</b>. 
+            I'm a CS and Data Science student at <u>NYU</u>. 
             I'm excited to combine my coding skills and interests in data to build intelligent software.
         </p>
         <p>
             Outside of school, I mainly work on web development because I'm excited about 
-            its vibrant, evolving community and combinations of many different technologies.
+            its vibrant community and evolving technologies.
             I like to predict what products do people want and think about how to make a positive impact.
             My passions lie particularly in fullstack, open source, and software design patterns. 
             <br/>
