Add mobile styling

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -23,8 +23,33 @@
     }
     
     .links{
-        word-spacing: 20px;
-        margin-bottom: 100px;
+        word-spacing: 2em;
+        margin-bottom: 2em;
+    }
+
+    @media only screen and (max-device-width: 480px){
+        padding: 3em 3em 3em 3em;
+
+        .title {
+            font-size: 4em;
+            
+        }
+        .description{
+            font-size: 3.8em;
+        }
+        
+        .links{
+            display: flex;
+            flex-direction: column;
+        }
+
+        a{
+            text-align: center;
+            margin-bottom: 1em;
+        }
+
+
+        
     }
     
 
