--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,5 +13,8 @@
     <%= link_to 'Edit', edit_post_path(@post) %>
   <% end %>
   <%= button_to '⬅️ back', posts_url, method: :get, class: "button back" %>
+
+  <%= javascript_pack_tag("hello_react") %>​
+
 </div>
 
