Initialize comment section in react

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,7 +14,7 @@
   <% end %>
   <%= button_to '⬅️ back', posts_url, method: :get, class: "button back" %>
 
-  <%= javascript_pack_tag("hello_react") %>​
+  <div id="comment-form"></div>
 
 </div>
 
